--- a/src/token_frontend/index.html
+++ b/src/token_frontend/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>IC Hello Starter</title>
+  <title>ZeRo</title>
   <base href="/" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/public/assets/wallet.svg" type="/image/svg+xml"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
